Kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dealership-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dealership-app
  template:
    metadata:
      labels:
        app: dealership-app
    spec:
      containers:
      - name: dealership-app
        image: vanestojanov/devops_project:latest
        ports:
        - containerPort: 8000
