Kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dealership-app-service
spec:
  selector:
    app: dealership-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
