Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dealership-app-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: vane-dealership.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dealership-app-service
            port:
              number: 80
